--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -132,8 +132,12 @@ viaturaResumoInput.tipoCombustivel=Tipo de combust√≠vel
 viaturaResumoInput.tipoViatura=Tipo de viatura
 viatura.id=C√≥digo da viatura
 
-
-
+#FOTO DO CANDIDATO
+fotoCandidatoInput.arquivo=Arquivo da foto
+fotoCandidatoInput.descricao=Descricao da foto
+FileSize.fotoCandidatoInput.arquivo=A foto deve ter um tamanho m·ximo de {1}
+FileSize.fotoCandidatoInput.arquivo=A foto deve ter um tamanho m·ximo de {1}
+FileContentType.fotoCandidatoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 
 
 
