Atualiza campos de candidato e criar crud de usuario

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
-NotBlank={0} não obrigatório
-NotNull={0} não obrigatório
+NotBlank={0} é obrigatório
+NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Email={0} deve ser um endereço de e-mail válido
 
@@ -7,11 +7,12 @@ Email={0} deve ser um endereço de e-mail válido
 typeMismatch.java.lang.Long={0} deve ser um nÃºmero vÃ¡lido
 
 #CandidatoInput
-NotBlank.candidatoInput.nome={0} é obrigatória
+NotBlank.candidatoInput.nome={0} é obrigatório(a)
 NotNull.candidatoInput.numero= número do candidato é obrigatório
 candidatoInput.partido= partido
 candidatoInput.telefone= telefone
 candidatoInput.email=E-mail do usuário
+candidatoInput.ativo=status ativo ou inativo do candidato 
 
 
 
@@ -22,6 +23,12 @@ FileSize.fotoCandidatoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 FileSize.fotoCandidatoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 FileContentType.fotoCandidatoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 
+
+#UsuarioInput
+NotBlank.usuarioInput.nome={0} é obrigatório(a)
+usuarioInput.telefone= telefone
+usuarioInput.email=E-mail
+usuarioInput.ativo=status ativo ou inativo do usuário 
 
 
 # Pedido Filter
